// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page - Initial Render Tests Connectivity Success State should match snapshot for initial state 1`] = `
<main
  class="ant-layout-content landingPage pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-stretch ant-flex-justify-center ant-flex-vertical"
    >
      <div
        class="landingLogo fade-in ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 8px;"
      >
        <img
          alt="Sharp AI"
          height="50"
          src="/images/sharp-logo.png"
        />
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
          style="font-weight: 600; font-size: 27.77777777777778px;"
        >
          SharpAI
        </span>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1vjf2v5 ant-divider-horizontal"
        role="separator"
      />
      <form
        class="ant-form ant-form-vertical ant-form-hide-required-mark css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
            style="width: 400px;"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required ant-form-item-required-mark-hidden"
                  for="sharpAPIUrl"
                  title="SharpAI Server URL"
                >
                  SharpAI Server URL
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-group-wrapper-outlined css-dev-only-do-not-override-1vjf2v5 ant-input-search ant-input-search-large ant-input-search-with-button"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-1vjf2v5"
                      >
                        <input
                          aria-required="true"
                          class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                          id="sharpAPIUrl"
                          type="search"
                          value="http://localhost:8000"
                        />
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-input-search-button"
                            type="button"
                          >
                            <span
                              aria-label="arrow-right"
                              class="anticon anticon-arrow-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="arrow-right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <main
        class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="pageContent"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-flex-start ant-flex-justify-center ant-flex-vertical"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-1vjf2v5"
              data-testid="loading-message"
            >
              Loading...
            </span>
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin pageLoader"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </div>
        </div>
      </main>
    </div>
  </div>
</main>
`;

exports[`Landing Page - Initial Render Tests Error State should match snapshot for error state 1`] = `
<main
  class="ant-layout-content landingPage pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-stretch ant-flex-justify-center ant-flex-vertical"
    >
      <div
        class="landingLogo fade-in ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 8px;"
      >
        <img
          alt="Sharp AI"
          height="50"
          src="/images/sharp-logo.png"
        />
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
          style="font-weight: 600; font-size: 27.77777777777778px;"
        >
          SharpAI
        </span>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1vjf2v5 ant-divider-horizontal"
        role="separator"
      />
      <form
        class="ant-form ant-form-vertical ant-form-hide-required-mark css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
            style="width: 400px;"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required ant-form-item-required-mark-hidden"
                  for="sharpAPIUrl"
                  title="SharpAI Server URL"
                >
                  SharpAI Server URL
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-group-wrapper-outlined css-dev-only-do-not-override-1vjf2v5 ant-input-search ant-input-search-large ant-input-search-with-button"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-1vjf2v5"
                      >
                        <input
                          aria-required="true"
                          class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                          id="sharpAPIUrl"
                          type="search"
                          value="http://localhost:8000"
                        />
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-input-search-button"
                            type="button"
                          >
                            <span
                              aria-label="arrow-right"
                              class="anticon anticon-arrow-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="arrow-right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <span
        class="ant-typography text-color-error mt css-dev-only-do-not-override-1vjf2v5"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
            />
          </svg>
        </span>
         Unable to connect to SharpAI services
      </span>
    </div>
  </div>
</main>
`;

exports[`Landing Page - Initial Render Tests Loading State should match snapshot for loading state 1`] = `
<main
  class="ant-layout-content landingPage pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-stretch ant-flex-justify-center ant-flex-vertical"
    >
      <div
        class="landingLogo fade-in ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 8px;"
      >
        <img
          alt="Sharp AI"
          height="50"
          src="/images/sharp-logo.png"
        />
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
          style="font-weight: 600; font-size: 27.77777777777778px;"
        >
          SharpAI
        </span>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1vjf2v5 ant-divider-horizontal"
        role="separator"
      />
      <form
        class="ant-form ant-form-vertical ant-form-hide-required-mark css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
            style="width: 400px;"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required ant-form-item-required-mark-hidden"
                  for="sharpAPIUrl"
                  title="SharpAI Server URL"
                >
                  SharpAI Server URL
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-group-wrapper-outlined css-dev-only-do-not-override-1vjf2v5 ant-input-search ant-input-search-large ant-input-search-with-button"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-1vjf2v5"
                      >
                        <input
                          aria-required="true"
                          class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                          id="sharpAPIUrl"
                          type="search"
                          value="http://localhost:8000"
                        />
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-input-search-button"
                            type="button"
                          >
                            <span
                              aria-label="arrow-right"
                              class="anticon anticon-arrow-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="arrow-right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <main
        class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="pageContent"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-flex-start ant-flex-justify-center ant-flex-vertical"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-1vjf2v5"
              data-testid="loading-message"
            >
              Loading...
            </span>
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin pageLoader"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </div>
        </div>
      </main>
    </div>
  </div>
</main>
`;

exports[`Landing Page - Initial Render Tests Success State should match snapshot for successful landing page render 1`] = `
<main
  class="ant-layout-content landingPage pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-stretch ant-flex-justify-center ant-flex-vertical"
    >
      <div
        class="landingLogo fade-in ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 8px;"
      >
        <img
          alt="Sharp AI"
          height="50"
          src="/images/sharp-logo.png"
        />
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
          style="font-weight: 600; font-size: 27.77777777777778px;"
        >
          SharpAI
        </span>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1vjf2v5 ant-divider-horizontal"
        role="separator"
      />
      <form
        class="ant-form ant-form-vertical ant-form-hide-required-mark css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
            style="width: 400px;"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required ant-form-item-required-mark-hidden"
                  for="sharpAPIUrl"
                  title="SharpAI Server URL"
                >
                  SharpAI Server URL
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-group-wrapper-outlined css-dev-only-do-not-override-1vjf2v5 ant-input-search ant-input-search-large ant-input-search-with-button"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-1vjf2v5"
                      >
                        <input
                          aria-required="true"
                          class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                          id="sharpAPIUrl"
                          type="search"
                          value="http://localhost:8000"
                        />
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-input-search-button"
                            type="button"
                          >
                            <span
                              aria-label="arrow-right"
                              class="anticon anticon-arrow-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="arrow-right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <main
        class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="pageContent"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-flex-start ant-flex-justify-center ant-flex-vertical"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-1vjf2v5"
              data-testid="loading-message"
            >
              Loading...
            </span>
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin pageLoader"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </div>
        </div>
      </main>
    </div>
  </div>
</main>
`;
